--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  intl: ^0.20.1
   logger: ^2.5.0
   modal_progress_hud_nsn: ^0.4.0
 
